--- a/src/cascadia/TerminalSettingsEditor/AddProfile.xaml
+++ b/src/cascadia/TerminalSettingsEditor/AddProfile.xaml
@@ -37,7 +37,8 @@
             </Button>
         </Border>
         <StackPanel Margin="{StaticResource StandardControlMargin}">
-            <local:SettingContainer x:Uid="AddProfile_Duplicate">
+            <local:SettingContainer x:Name="DuplicateProfile"
+                                    x:Uid="AddProfile_Duplicate">
                 <ComboBox x:Name="Profiles"
                           AutomationProperties.AccessibilityView="Content"
                           ItemsSource="{x:Bind State.Settings.AllProfiles, Mode=OneWay}"
