--- a/src/cascadia/TerminalSettingsEditor/Extensions.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Extensions.xaml
@@ -500,7 +500,8 @@
                 <muxc:Expander.Content>
                     <StackPanel>
                         <!--  Scope  -->
-                        <local:SettingContainer x:Uid="Extensions_Scope"
+                        <local:SettingContainer x:Name="Scope"
+                                                x:Uid="Extensions_Scope"
                                                 Content="{x:Bind ViewModel.CurrentExtensionPackage.Scope, Mode=OneWay}"
                                                 IsTabStop="False"
                                                 Style="{StaticResource SettingContainerWithTextContent}" />
