--- a/src/cascadia/TerminalSettingsEditor/Interaction.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Interaction.xaml
@@ -27,13 +27,15 @@
     <StackPanel>
         <StackPanel Style="{StaticResource SettingsStackStyle}">
             <!--  Copy On Select  -->
-            <local:SettingContainer x:Uid="Globals_CopyOnSelect">
+            <local:SettingContainer x:Name="CopyOnSelect"
+                                    x:Uid="Globals_CopyOnSelect">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.CopyOnSelect, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Copy Format  -->
-            <local:SettingContainer x:Uid="Globals_CopyFormat">
+            <local:SettingContainer x:Name="CopyFormat"
+                                    x:Uid="Globals_CopyFormat">
                 <ComboBox AutomationProperties.AccessibilityView="Content"
                           ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                           ItemsSource="{x:Bind ViewModel.CopyFormatList, Mode=OneWay}"
@@ -42,19 +44,22 @@
             </local:SettingContainer>
 
             <!--  Trim Block Selection  -->
-            <local:SettingContainer x:Uid="Globals_TrimBlockSelection">
+            <local:SettingContainer x:Name="TrimBlockSelection"
+                                    x:Uid="Globals_TrimBlockSelection">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.TrimBlockSelection, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Trim Paste  -->
-            <local:SettingContainer x:Uid="Globals_TrimPaste">
+            <local:SettingContainer x:Name="TrimPaste"
+                                    x:Uid="Globals_TrimPaste">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.TrimPaste, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Word Delimiters  -->
-            <local:SettingContainer x:Uid="Globals_WordDelimiters"
+            <local:SettingContainer x:Name="WordDelimiters"
+                                    x:Uid="Globals_WordDelimiters"
                                     CurrentValue="{x:Bind ViewModel.WordDelimiters, Mode=OneWay}"
                                     Style="{StaticResource ExpanderSettingContainerStyle}">
                 <TextBox IsSpellCheckEnabled="False"
@@ -63,13 +68,15 @@
             </local:SettingContainer>
 
             <!--  Snap On Resize  -->
-            <local:SettingContainer x:Uid="Globals_SnapToGridOnResize">
+            <local:SettingContainer x:Name="SnapToGridOnResize"
+                                    x:Uid="Globals_SnapToGridOnResize">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.SnapToGridOnResize, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Tab Switcher Mode  -->
-            <local:SettingContainer x:Uid="Globals_TabSwitcherMode">
+            <local:SettingContainer x:Name="TabSwitcherMode"
+                                    x:Uid="Globals_TabSwitcherMode">
                 <ComboBox AutomationProperties.AccessibilityView="Content"
                           ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                           ItemsSource="{x:Bind ViewModel.TabSwitcherModeList}"
@@ -78,31 +85,36 @@
             </local:SettingContainer>
 
             <!--  Focus Follow Mouse Mode  -->
-            <local:SettingContainer x:Uid="Globals_FocusFollowMouse">
+            <local:SettingContainer x:Name="FocusFollowMouse"
+                                    x:Uid="Globals_FocusFollowMouse">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.FocusFollowMouse, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Enable Font Size Changes with Scrolling  -->
-            <local:SettingContainer x:Uid="Globals_ScrollToZoom">
+            <local:SettingContainer x:Name="ScrollToZoom"
+                                    x:Uid="Globals_ScrollToZoom">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.ScrollToZoom, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Enable Window Opacity Changes with Scrolling  -->
-            <local:SettingContainer x:Uid="Globals_ScrollToChangeOpacity">
+            <local:SettingContainer x:Name="ScrollToChangeOpacity"
+                                    x:Uid="Globals_ScrollToChangeOpacity">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.ScrollToChangeOpacity, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Detect URLs  -->
-            <local:SettingContainer x:Uid="Globals_DetectURLs">
+            <local:SettingContainer x:Name="DetectURLs"
+                                    x:Uid="Globals_DetectURLs">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.DetectURLs, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Search Web Default Query URL  -->
-            <local:SettingContainer x:Uid="Globals_SearchWebDefaultQueryUrl"
+            <local:SettingContainer x:Name="SearchWebDefaultQueryUrl"
+                                    x:Uid="Globals_SearchWebDefaultQueryUrl"
                                     CurrentValue="{x:Bind ViewModel.SearchWebDefaultQueryUrl, Mode=OneWay}"
                                     Style="{StaticResource ExpanderSettingContainerStyle}">
                 <TextBox IsSpellCheckEnabled="False"
@@ -111,7 +123,8 @@
             </local:SettingContainer>
 
             <!--  Enable Color Selection  -->
-            <local:SettingContainer x:Uid="Globals_EnableColorSelection">
+            <local:SettingContainer x:Name="EnableColorSelection"
+                                    x:Uid="Globals_EnableColorSelection">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.EnableColorSelection, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
@@ -123,25 +136,29 @@
                        Style="{StaticResource TextBlockSubHeaderStyle}" />
 
             <!--  Close All Tabs Warning  -->
-            <local:SettingContainer x:Uid="Globals_ConfirmCloseAllTabs">
+            <local:SettingContainer x:Name="ConfirmCloseAllTabs"
+                                    x:Uid="Globals_ConfirmCloseAllTabs">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.ConfirmCloseAllTabs, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Input Service Warning  -->
-            <local:SettingContainer x:Uid="Globals_InputServiceWarning">
+            <local:SettingContainer x:Name="InputServiceWarning"
+                                    x:Uid="Globals_InputServiceWarning">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.InputServiceWarning, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Large Paste Warning  -->
-            <local:SettingContainer x:Uid="Globals_WarnAboutLargePaste">
+            <local:SettingContainer x:Name="WarnAboutLargePaste"
+                                    x:Uid="Globals_WarnAboutLargePaste">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.WarnAboutLargePaste, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
 
             <!--  Multi Line Paste Warning  -->
-            <local:SettingContainer x:Uid="Globals_WarnAboutMultiLinePaste">
+            <local:SettingContainer x:Name="WarnAboutMultiLinePaste"
+                                    x:Uid="Globals_WarnAboutMultiLinePaste">
                 <ComboBox AutomationProperties.AccessibilityView="Content"
                           ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                           ItemsSource="{x:Bind WarnAboutMultiLinePasteList}"
